{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 15,
  "lineage": "110c39e7-6a91-9cd1-686c-a2c62b7f93f6",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_epi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e13b3f49100d46e7",
            "arn": "arn:aws:ec2:us-east-1:851768255741:elastic-ip/eipalloc-0e13b3f49100d46e7",
            "domain": "vpc",
            "id": "eipalloc-0e13b3f49100d46e7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-86-191-232.compute-1.amazonaws.com",
            "public_ip": "54.86.191.232",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "prod-vpc-nat.eip",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "prod-vpc-nat.eip",
              "Terraform": "true"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851768255741:internet-gateway/igw-0d74e054df99aaafb",
            "id": "igw-0d74e054df99aaafb",
            "owner_id": "851768255741",
            "tags": {
              "Environment": "production",
              "Name": "prod-vpc-igw",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "prod-vpc-igw",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05a7e7b97222e5c36"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e13b3f49100d46e7",
            "association_id": "eipassoc-09e21c8131cffd06b",
            "connectivity_type": "public",
            "id": "nat-071d55e484080cc25",
            "network_interface_id": "eni-0df709501d70f25de",
            "private_ip": "10.0.1.233",
            "public_ip": "54.86.191.232",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08289048670020d95",
            "tags": {
              "Environment": "production",
              "Name": "{var.name}-nat",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "{var.name}-nat",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_epi",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851768255741:route-table/rtb-06c0b38ab86376057",
            "id": "rtb-06c0b38ab86376057",
            "owner_id": "851768255741",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-071d55e484080cc25",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "prod-vpc-private-rt",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "prod-vpc-private-rt",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a7e7b97222e5c36"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_epi",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851768255741:route-table/rtb-0a5bfde3dfbce14be",
            "id": "rtb-0a5bfde3dfbce14be",
            "owner_id": "851768255741",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d74e054df99aaafb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "prod-vpc-public-rt",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "prod-vpc-public-rt",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a7e7b97222e5c36"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0180e1ee6ed52cdeb",
            "route_table_id": "rtb-06c0b38ab86376057",
            "subnet_id": "subnet-0b15302cde7d23000"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_epi",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc68c9baf5495302",
            "route_table_id": "rtb-06c0b38ab86376057",
            "subnet_id": "subnet-07554e63d23b89ef8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_epi",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc6d09ab6bdde8e3",
            "route_table_id": "rtb-0a5bfde3dfbce14be",
            "subnet_id": "subnet-08289048670020d95"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d01f3393c01a7ae0",
            "route_table_id": "rtb-0a5bfde3dfbce14be",
            "subnet_id": "subnet-0dcbb778f6c44e861"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851768255741:subnet/subnet-0b15302cde7d23000",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b15302cde7d23000",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851768255741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "prod-vpc-private-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "prod-vpc-private-1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05a7e7b97222e5c36"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851768255741:subnet/subnet-07554e63d23b89ef8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07554e63d23b89ef8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851768255741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "prod-vpc-private-2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "prod-vpc-private-2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05a7e7b97222e5c36"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851768255741:subnet/subnet-08289048670020d95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08289048670020d95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851768255741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "prod-vpc-public-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "prod-vpc-public-1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05a7e7b97222e5c36"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851768255741:subnet/subnet-0dcbb778f6c44e861",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcbb778f6c44e861",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851768255741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "prod-vpc-public-2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "prod-vpc-public-2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05a7e7b97222e5c36"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851768255741:vpc/vpc-05a7e7b97222e5c36",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b8e956cf207a98ff",
            "default_route_table_id": "rtb-06986a0026d7210bd",
            "default_security_group_id": "sg-0d894ef42b0f46d7c",
            "dhcp_options_id": "dopt-036251ab009b52bd3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05a7e7b97222e5c36",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06986a0026d7210bd",
            "owner_id": "851768255741",
            "tags": {
              "Environment": "production",
              "Name": "prod-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "prod-vpc",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}